# vendor_ohemu

./: .gitignore  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json
common/: patch.py  qemu-run  qemu_mini_test_monitor.sh
cortex_m4_qemu_liteos_m/: BUILD.gn  config.json
display_qemu_liteos_a/: BUILD.gn  build.sh  config.json  fs.yml
display_qemu_liteos_a/config/: debug.config
display_qemu_liteos_a/init_configs/: init_liteos_a_arm_virt.cfg
display_qemu_liteos_a/patches/: BUILD.gn  build.sh  kernel_BUILD.gn  patch.py  qemu-init  qemu-run
host_product/: config.json
mini_qemu_liteos_a/: BUILD.gn  config.json
qemu_arm64_linux_full/: bundle.json  config.json  product.gni  qemu_run.sh  security_config  updater_config
qemu_arm64_linux_full/power_config/: BUILD.gn
qemu_arm64_linux_min/: config.json
qemu_arm_linux_headless/: config.json  qemu_run.sh
qemu_arm_linux_min/: config.json  qemu_run.sh
qemu_ca7_mini_system_demo/: BUILD.gn  config.json
qemu_ca7_mini_system_demo/kernel_configs/: debug.config
qemu_cm55_mini_system_demo/: BUILD.gn  config.json  qemu_run.sh
qemu_cm55_mini_system_demo/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
qemu_cm55_mini_system_demo/hals/utils/token/: BUILD.gn
qemu_csky_mini_system_demo/: BUILD.gn  config.json  qemu_run.sh
qemu_csky_mini_system_demo/hals/utils/sys_param/: hal_sys_param.c
qemu_csky_mini_system_demo/hals/utils/token/: BUILD.gn
qemu_loongarch64_linux_min/: config.json  qemu_run.sh
qemu_mini_system_demo/: BUILD.gn  config.json  qemu_run.sh  qemu_test_monitor.sh
qemu_mini_system_demo/kernel_configs/: debug.config
qemu_riscv32_mini_system_demo/: BUILD.gn  config.json  qemu_run.sh
qemu_riscv32_mini_system_demo/hals/utils/sys_param/: hal_sys_param.c
qemu_riscv32_mini_system_demo/kernel_configs/: debug.config
qemu_riscv32_mini_system_demo/tests/: BUILD.gn  app.cpp
qemu_riscv32_mini_system_demo/tests/ability/: BUILD.gn
qemu_riscv64_linux_min/: config.json  qemu_run.sh  subsystem_config_overlay.json
qemu_small_system_demo/: BUILD.gn  config.json  fs.yml  qemu_run.sh
qemu_small_system_demo/apps/: BUILD.gn
qemu_small_system_demo/apps/src/: sample_ui.cpp
qemu_small_system_demo/config/: debug.config
qemu_small_system_demo/graphic_config/: product_graphic_lite_config.h
qemu_small_system_demo/hals/security/permission_lite/ipc_auth/include/: policy_preset_product.h
qemu_small_system_demo/hals/utils/sys_param/: BUILD.gn
qemu_small_system_demo/init_configs/: init_liteos_a_arm_virt.cfg
qemu_small_system_demo/kernel_configs/: debug.config
qemu_small_system_demo/patches/: patch.py  qemu-run
qemu_x86_64_linux_full/: bundle.json  config.json  qemu_run.sh
qemu_x86_64_linux_full/power_config/: BUILD.gn
qemu_x86_64_linux_min/: config.json
qemu_xtensa_mini_system_demo/: BUILD.gn  config.json  qemu_run.sh
riscv_qemu_liteos_m/: BUILD.gn  config.json
virt/: BUILD.gn  virt_common.json  virt_common_x86_64.json
virt/default_app_config/: BUILD.gn
virt/etc/: BUILD.gn
virt/hals/audio/: BUILD.gn  alsa_adapter.json  audio_paths.json  product.gni
virt/hals/codec/: BUILD.gn
virt/hdf_config/khdf/: .hdf_hcs_hex.o.d  hdf.hcs
virt/hdf_config/khdf/camera/: camera_config.hcs
virt/hdf_config/uhdf/: BUILD.gn  device_info.hcs  usb_pnp_device.hcs
virt/image_conf/: BUILD.gn  chip_prod_image_conf.txt  sys_prod_image_conf.txt  userdata_image_conf.txt  vendor_image_conf.txt
virt/power_config/: power_mode_config.xml
virt/preinstall-config/: BUILD.gn  install_list.json  install_list_capability.json  install_list_permissions.json
virt/resourceschedule/: BUILD.gn
virt/security_config/: critical_reboot_process_list.json  high_privilege_process_list.json  sanitizer_check_list.gni
virt/window_config/: BUILD.gn  display_manager_config.xml  window_manager_config.xml
(+11 files in other folders)
