# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

executable("cortex_m4_qemu_liteos_m") {
  output_name = "OHOS_Image"
  ldflags = [
    "-specs=nano.specs",
    "-nostartfiles",
    "-Wl,-T"+rebase_path("//device/qemu/cortex_m4_an386/Liteos.ld"),
    "-Wl,--gc-section"
  ]

  libs = [
    "m",
    "nosys",
    "c"
  ]

  deps = [
    "//build/lite:ohos",
    "//device/qemu/cortex_m4_an386:board"
  ]
}
