# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

executable("qemu_mini_system_demo") {
  output_name = "OHOS_Image"
  ldflags = [
    "-nostartfiles",
    "-Wl,-T" + rebase_path("//device/qemu/arm_mps2_an386/Liteos.ld"),
    "-Wl,--gc-section",
  ]

  libs = [ "nosys" ]

  deps = [
    "//build/lite:ohos",
    "//device/qemu/arm_mps2_an386:board",
  ]
}
