# Copyright (C) 2020 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")

exec_script("patches/patch.py", [ rebase_path("//", root_build_dir) ])

group("qemu_small_system_demo") {
  deps = [
    "apps",
    "init_configs",
  ]
}
