# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

executable("riscv_qemu_liteos_m") {
  output_name = "OHOS_Image"
  ldflags = [
    "-Wl,-mcmodel=medany",
    "-Wl,-melf32lriscv",
    "-nostartfiles",
    "-Wl,-T"+rebase_path("Liteos.ld"),
  ]
  libs = [
    "gcc",
    "nosys",
    "c"
  ]
  deps = [
    "//kernel/liteos_m:kernel",
    "//device/qemu/riscv32_virt:board"
  ]
}
