import("//build/lite/config/component/lite_component.gni")

lite_component("apps") {
  features = [ ":simple_ui_demo" ]
}

executable("simple_ui_demo") {
  sources = [ "src/sample_ui.cpp" ]
  include_dirs = [
    "//foundation/graphic/ui/interfaces/kits",
    "//foundation/graphic/ui/interfaces/innerkits",
    "//foundation/graphic/utils/interfaces",
  ]
  ldflags = [
    "-lstdc++",
    "-lpthread",
    "-Wl,-rpath-link=$ohos_root_path/$root_out_dir",
  ]

  deps = [
    "//foundation/graphic/ui/test/framework:lite_graphic_test_framework",
    "//foundation/graphic/utils:lite_graphic_hals",
    "//foundation/graphic/wms:wms_client",
  ]
}
